--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 # MONGODB (MongoProperties)
 spring.data.mongodb.uri=mongodb://localhost:27017/mahavir
 spring.data.mongodb.database=mahavir
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true
