--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # MONGODB (MongoProperties)
-spring.data.mongodb.uri=mongodb://localhost:27017/mahavir
+spring.data.mongodb.uri=mongodb+srv://shivam380:shivam380@cluster0.fosxk.mongodb.net/test
 spring.data.mongodb.database=mahavir
 spring.servlet.multipart.max-file-size=256MB
 spring.servlet.multipart.max-request-size=256MB
