--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
     		<artifactId>jjwt</artifactId>
     		<version>0.9.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
