--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.3</version> 
+		</dependency>
+			
 
 	</dependencies>
 
