--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.servlet.multipart.enabled=true
 
 #Mail Api
 spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
-spring.mail.username=shivam380.testing@gmail.com
-spring.mail.password=zitiqqnrgofqwisr
-spring.mail.port=587
+spring.mail.host=smtpout.secureserver.net
+spring.mail.username=edata@mahavirelectronics.net
+spring.mail.password=edata@1234
+spring.mail.port=80
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
