--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 # MONGODB (MongoProperties)
-spring.data.mongodb.uri = mongodb+srv://MahavirElectronics:Ljs9ou8T8rKSBWbh@mahavirdb.xcudh.mongodb.net/test
-# spring.data.mongodb.uri= mongodb+srv://MahavirElectronics:shivam380.testing.gmail.com@mahavir-electronics-clu.xcudh.mongodb.net/test
+# spring.data.mongodb.uri = mongodb://localhost:27017
+spring.data.mongodb.uri= mongodb+srv://Mahavir:Oxvv6vldxxATAd81@paryatan.xcudh.mongodb.net/test
 spring.data.mongodb.database=mahavir
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
