Added dockerfile for backend application
Signed-off-by: Shivam Verma <shivam380@LAPTOP-3ELSBL8N.localdomain>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 # MONGODB (MongoProperties)
-# spring.data.mongodb.uri = mongodb://localhost:27017
-spring.data.mongodb.uri= mongodb+srv://Mahavir:Oxvv6vldxxATAd81@paryatan.xcudh.mongodb.net/test
+spring.data.mongodb.uri = mongodb+srv://Mahavir:Oxvv6vldxxATAd81@mahavir.xcudh.mongodb.net/test
+# spring.data.mongodb.uri= mongodb+srv://Mahavir:Oxvv6vldxxATAd81@paryatandb.xcudh.mongodb.net/test
 spring.data.mongodb.database=mahavir
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
@@ -10,13 +10,10 @@ spring.servlet.multipart.enabled=true
 
 #Mail Api
 spring.mail.default-encoding=UTF-8
-# spring.mail.host=smtpout.secureserver.net
-spring.mail.host=smtp.gmail.com
-# spring.mail.username=edata@mahavirelectronics.net
-# spring.mail.password=edata@1234
-spring.mail.username=edatamahavir@gmail.com
-spring.mail.password=jiecciwfawjoonam
-spring.mail.port=587
+spring.mail.host=smtpout.secureserver.net
+spring.mail.username=edata@mahavirelectronics.net
+spring.mail.password=edata@1234
+spring.mail.port=80
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
