--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
               </executions>
             </plugin>
         </plugins>
+		<finalName>spring-boot-docker</finalName>
 	</build>
 
 </project>
