Working on docker
Signed-off-by: Shivam Verma <shivam380@LAPTOP-3ELSBL8N.localdomain>

--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
               </executions>
             </plugin>
         </plugins>
-		<finalName>spring-boot-docker</finalName>
+		<finalName>springboot-mongo-docker</finalName>
 	</build>
 
 </project>
