--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 # MONGODB (MongoProperties)
-spring.data.mongodb.uri = mongodb+srv://Mahavir:Oxvv6vldxxATAd81@mahavir.xcudh.mongodb.net/test
+spring.data.mongodb.host = host.docker.internal
+spring.data.mongodb.port=27017
 # spring.data.mongodb.uri= mongodb+srv://Mahavir:Oxvv6vldxxATAd81@paryatandb.xcudh.mongodb.net/test
 spring.data.mongodb.database=mahavir
 spring.servlet.multipart.max-file-size=1000MB
