Changed mongodb host
Signed-off-by: Shivam Verma <shivam.r.verma@seagate.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # MONGODB (MongoProperties)
-spring.data.mongodb.host = host.docker.internal
+spring.data.mongodb.host = mongodb://184.73.76.49:27017
 spring.data.mongodb.port=27017
 # spring.data.mongodb.uri= mongodb+srv://Mahavir:Oxvv6vldxxATAd81@paryatandb.xcudh.mongodb.net/test
 spring.data.mongodb.database=mahavir
