--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # MONGODB (MongoProperties)
-spring.data.mongodb.host =localhost
-spring.data.mongodb.port=27017
-# spring.data.mongodb.uri= mongodb+srv://Mahavir:mahavir1234@paryatan.xcudh.mongodb.net/test
+# spri/ng.data.mongodb.host =localhost
+# spring.data.mongodb.port=27017
+spring.data.mongodb.uri= mongodb+srv://Mahavir:mahavir1234@paryatan.xcudh.mongodb.net/test
 spring.data.mongodb.database=mahavir
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
