Added swagger documentation of mahavir electronics apis
Signed-off-by: ShivamVerma380 <shivam.r.verma@seagate.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.servlet.multipart.max-request-size=1000MB
 spring.servlet.multipart.enabled=true
 
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+
+
 #Mail Api
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtpout.secureserver.net
