--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port = 9292
 # MONGODB (MongoProperties)
 # spring.data.mongodb.host =host.docker.internal
 # spring.data.mongodb.port=27018
-spring.data.mongodb.uri = mongodb+srv://doadmin:ud10etD826P73EV9@db-mongodb-blr1-09993-db07501a.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=db-mongodb-blr1-09993
-# spring.data.mongodb.uri= mongodb+srv://Mahavir:mahavir1234@paryatan.xcudh.mongodb.net/test
+# spring.data.mongodb.uri = mongodb+srv://shivam:fo5u068G1gPV743R@db-mongodb-blr1-09993-db07501a.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=db-mongodb-blr1-09993
+spring.data.mongodb.uri= mongodb://localhost:27017
 spring.data.mongodb.database=mahavir
 # spring.data.mongodb.username = doadmin
 # spring.data.mongodb.password = ud10etD826P73EV9
